@@ -1,3 +1,6 @@
+19 August 2014: Wouter
+	- Update unbound manpage with more explanation (from Florian Obser).
+
 18 August 2014: Wouter
 	- Fix #603: unbound-checkconf -o <option> should skip verification
 	  checks.
